footer icons mobile gap fix

--- a/CSS/footer_style.css
+++ b/CSS/footer_style.css
@@ -88,7 +88,7 @@ footer{
           margin-right: 0px;   
      }
      .contact_icons{
-          gap: 20px;
+          gap: 40px;
           zoom: 0.8;
      }
      footer{
